--- a/project/views/common/components/admin.html.twig
+++ b/project/views/common/components/admin.html.twig
@@ -148,7 +148,7 @@
                         {% for field in fields %}
                             <div class="col-md-{{ field.columns }}">{{ data.text(item[field.name], item._id, field.name, editMode) }}{% if field.link %} <a href="/{{ item.slug }}">ссылка</a>{% endif %}</div>{# Надо параметризировать по какому полю будет искаться зама запись, то что в page slug #}
                         {% endfor %}
-                        <div class="col-md-1"><a class="remove-page-button" href="/e/{{ type }}/remove?{{ fields[0].name }}={{ item[fields[0].name] }}"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></div>
+                        <div class="col-md-1"><a class="remove-page-button" href="/e/{{ type }}/remove/{{ item._id }}"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a></div>
                     </div>
                 </td>
             </tr>
